Handle ctrl + shift + left click on links in PDF.

Ctrl + shift + left (or shift + middle) click on links should open a new
foreground tab.

BUG=630075
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2166193002
Cr-Commit-Position: refs/heads/master@{#407840}

Former-commit-id: 1b44ac414765de1d882f295006cfe2687872320b