pdf/preview_mode_client.cc
@@ -38,7 +38,7 @@ void PreviewModeClient::ScrollToPage(int page) {
 }
 
 void PreviewModeClient::NavigateTo(const std::string& url,
-                                   bool open_in_new_tab) {
+                                   WindowOpenDisposition disposition) {
   NOTREACHED();
 }
 
